# Self-Learning

./: .gitignore  README.md  requirements.txt
AI/Dive Into Deep Learning/: 123.ipynb  INFO.md
AlgoAndDS/Codeforces/: CodeForcesTester.py
AlgoAndDS/LeetCode/Easy/Valid Word/: README.md
DSA/_DataStructures/LinkedList/: implementation.ipynb
Discussion/: CheatSheets.md
Tools/: UpdateREADME.py  genLCREADME.py  gen_LC_README.py
Tools/Avoid Flood in The City/: README.md
Tools/Count Unguarded Cells in the Grid/: README.md  Solutions.ipynb
Tools/Delete Nodes From Linked List Present in Array/: README.md
Tools/Find X-Sum of All K-Long Subarrays I/: README.md
Tools/Find the Minimum Amount of Time to Brew Potions/: Solutions.ipynb
Tools/Increment Submatrices by One/: README.md
Tools/LCFetcher/: cfGenerator.py  ioExamples.py  lcClient.py  main.py  nbGenerator.py  parserHTML.py  pdfExport.py  pyproject.toml  readmeBuilder.py
Tools/LCFetcher/samples/: solution.ipynb  solution.py
Tools/Lexicographically Smallest String After Applying Operations/: README.md
Tools/Maximum Frequency of an Element After Performing Operations I/: Solutions.ipynb
Tools/Power Grid Maintenance/: README.md  Solutions.ipynb
Tools/Samples/: Solutions.ipynb  solution.cpp  solution.py
Tools/Smallest Number With All Set Bits/: README.md
Tools/Successful Pairs of Spells and Potions/: README.md  Solutions.ipynb
Tools/Swim in Rising Water/: README.md
Tools/Triangle/: README.md  Solutions.ipynb
Tools/Valid Triangle Number/: Solutions.ipynb
Tools/Water Bottles/: README.md
(+276 files in other folders)
